# markion

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES.md  build.rs  package-lock.json  package.json  packager.toml
.github/workflows/: quality.yml  release.yml
.reasonix/: desktop-topic-auto-title-meta.json  desktop-topic-created-at.json  desktop-topic-title-sources.json  desktop-topic-titles.json
.zcode/commands/openspec/: apply.md  archive.md  explore.md  propose.md  sync.md
.zcode/plans/: plan-sess_0b55d26e-47dc-48a5-86e3-42748a7a718c.md  plan-sess_cfaaed63-ae7b-4b8d-b66b-951a98eee5c4.md
assets/: markion.icns
crates/diagram/: Cargo.toml
crates/diagram/src/: lib.rs  mermaid.rs
crates/export/: Cargo.toml
crates/export/src/: docx.rs  engine.rs  error.rs  lib.rs  pdf.rs
crates/markdown/: Cargo.toml
crates/markdown/examples/: math_rendering.rs  test_hr.rs  test_list_dot.rs  test_pd_events.rs  test_task_8_4.rs  test_task_inline.rs
crates/markdown/src/: ast.rs  emoji.rs  error.rs  extended_inline.rs  highlight.rs  incremental.rs  lib.rs  math.rs  math_README.md  parser.rs  renderer.rs
crates/markdown/tests/: block_syntax_property_test.rs  code_block_property_test.rs  debug_pulldown_events.rs  debug_punctuation_url.rs  debug_roundtrip.rs  debug_url_test.rs  extended_syntax_property_test.rs  extended_syntax_test.rs  html_and_url_test.rs  inline_render_property_test.rs  math_property_test.proptest-regressions  math_property_test.rs  nested_syntax_property_test.proptest-regressions  nested_syntax_property_test.rs  roundtrip_property_test.proptest-regressions  roundtrip_property_test.rs  simple_proptest.rs  task_list_test.rs  yaml_property_test.rs  yaml_tests.rs
crates/markdown/tests/fixtures/: math-render-corpus.txt
docs/: faq.md  keyboard-shortcuts.md  math-showcase.md  release-process.md  visual-editing-quality.md
examples/: bench_large_doc.rs
openspec/: config.yaml
openspec/changes/add-drag-drop-open/: .openspec.yaml  README.md  design.md  proposal.md  tasks.md
openspec/changes/add-file-tree-entry-context-actions/: design.md  proposal.md  tasks.md
openspec/changes/add-format-aware-save-dialogs/: design.md  proposal.md  tasks.md
openspec/changes/add-multilingual-i18n/: proposal.md
openspec/changes/add-open-folder/: proposal.md  tasks.md
openspec/changes/add-sync-scroll-setting/: proposal.md  tasks.md
openspec/changes/add-tabbed-shortcut-panel/: design.md  proposal.md  tasks.md
openspec/changes/add-visual-edit-link-navigation-icons/: design.md  proposal.md  tasks.md
openspec/changes/clarify-keyboard-shortcuts/: design.md  proposal.md  tasks.md
openspec/changes/collapse-visual-math-and-diagram-source/: design.md  proposal.md  tasks.md
openspec/changes/commit-visual-edit-to-wysiwyg/: design.md  proposal.md  tasks.md
openspec/changes/connect-active-tab-to-document-workspace/: design.md  proposal.md  tasks.md
openspec/changes/display-menu-shortcut-labels/: design.md  proposal.md  tasks.md
openspec/changes/expand-chinese-variants/: README.md
openspec/changes/expand-default-markdown-example/: design.md  proposal.md  tasks.md
openspec/changes/file-tree-context-menu-actions/: design.md  proposal.md  tasks.md
openspec/changes/file-tree-name-input-and-folder-delete/: README.md  design.md  proposal.md  tasks.md
openspec/changes/fix-diagram-image-fidelity/: proposal.md  tasks.md
openspec/changes/fix-html-preview-regressions/: design.md  proposal.md  tasks.md
openspec/changes/fix-remote-image-preview/: design.md  proposal.md  tasks.md
openspec/changes/fix-visual-edit-footnotes-and-link-defs/: design.md  proposal.md  tasks.md
openspec/changes/fix-visual-edit-input-and-caret/: proposal.md
openspec/changes/floating-find-replace-bar/: design.md
openspec/changes/improve-menu-bar-interaction/: design.md  proposal.md  tasks.md
openspec/changes/improve-visual-edit-live-preview/: design.md  proposal.md
openspec/changes/limit-initial-file-tree-expansion/: design.md  proposal.md  tasks.md
openspec/changes/menu-heading-preferences/: tasks.md
openspec/changes/move-reset-preferences-to-file/: design.md  proposal.md  tasks.md
openspec/changes/outline-preview-jump/: README.md  proposal.md  tasks.md
openspec/changes/persist-session-and-recent-files/: design.md  proposal.md  tasks.md
openspec/changes/preview-free-selection-context-menu/: design.md  proposal.md
openspec/changes/refresh-bilingual-readme/: design.md
openspec/changes/refresh-branding-icons/: design.md  tasks.md
openspec/changes/remove-preview-table-toolbar/: proposal.md
openspec/changes/render-high-quality-math/: proposal.md  tasks.md
openspec/changes/reuse-existing-file-tab/: proposal.md  tasks.md
openspec/changes/simplify-visual-image-presentation/: README.md  proposal.md  tasks.md
openspec/changes/square-main-pane-surfaces/: design.md  proposal.md  tasks.md
openspec/changes/support-cli-open-paths/: design.md  proposal.md  tasks.md
openspec/changes/use-icons-in-file-tree/: design.md  proposal.md  tasks.md
openspec/docs/: claude-session-20260708-1517-markion-1.txt  markion-improvements-suggestions-by-codex-gpt-5.6-sol-20260710.md  typune-integration-audit.md  typune-integration-plan-glm-zcode.md  typune-integration-plan.md  typune-integration-session-log.md
openspec/scripts/: generate-icons.mjs
openspec/specs/branding-assets/: spec.md
openspec/specs/chrome-platform/: spec.md
openspec/specs/code-and-math/: spec.md
scripts/: check-quality.ps1
src/: diagram.rs  editing.rs  escape.rs  export.rs  frontmatter.rs  highlight.rs  i18n.rs  lib.rs  main.rs  math.rs  model.rs  parse.rs  paths.rs  render.rs  source_mapped.rs  table.rs  text_util.rs  visual.rs
src/app/: appearance.rs  application.rs  bootstrap.rs  diagram.rs  documents.rs  editing.rs  editor_element.rs  math_render.rs  mod.rs  network.rs  preview.rs  root_view.rs  save_dialog.rs  search.rs  state.rs  tests.rs  workspace.rs
src/storage/: file_tree.rs  logging.rs  mod.rs  preferences.rs  recovery.rs  session.rs  theme_file.rs
(+273 files in other folders)
